# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
# $Id$

  MAJOR CHANGES in 2.0.51:
    1. /var/cache/edb/virtuals is no longer used at all. It's calculated now.
    2. /var/cache/edb/world is now /var/lib/portage/world.
    3. /etc/portage/profile/virtuals is _USER_ configs only.

  22 Nov 2004; Brian Harring <ferringb@gentoo.org> bin/ebuild-functions.sh:
  econf now ignores update_confcache's exit_code, and uses configure's.  Should
  kill off the occasionaly "couldn't update confcache" and killing of compile phase.

  22 Nov 2004; Brian Harring <ferringb@gentoo.org> src/filter-env/posix.c:
  Commited what should be a fix for the "lets randomly drop part of the env"
  issue that's been around lately.   Basically, it looks like it wasn't reading
  all of what was dumped to stdin.  Converted it to fread/fopen based, and used
  feof.  General cleanup aside from that, close fd's on the way out, etc.

  20 Nov 2004; Brian Harring <ferringb@gentoo.org> bin/ebuild.sh:
  filter-env is now in use.  In other words, you *will* have to do 
  the configure/install to get the binary, since it *is* required for
  correct env processing.  I tried a host of other solutions, so far 
  I can't break this one (aside from dumb typos in the code).  Processing 
  the envs from kdelibs/arts is now possible again.

  20 Nov 2004; Brian Harring <ferringb@gentoo.org> pym/portage_const.py:
  Added compatibility hack due to sandbox being moved.  Will remove it once 
  people have shifted over to using the split out sandbox's new location.

  20 Nov 2004; Brian Harring <ferringb@gentoo.org> <collection-of-files>:
  Portage is now autotool'd, w/ relevant configure.  Needs work, specifically,
  cnf installation isn't there yet- would prefer to add that when the 101 arch 
  specific make.conf's are collapsed down to one file.  Note sandbox was busted 
  out, and moved into it's own module.
